# integralCalculating

./: CMakeLists.txt  conf.txt
include/: configuration_t.h  func_to_integrate.h
src/: configuration_t.cpp  func_to_integrate.cpp  main.cpp
